syntax = "proto3";

package models;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "actions.proto";
import "cached_dependency.proto";
import "certificate_properties.proto";
import "environment_variables.proto";
import "modification_tag.proto";
import "network.proto";
import "security_group.proto";
import "volume_mount.proto";
import "check_definition.proto";
import "image_layer.proto";
import "metric_tags.proto";

message DesiredLRPSchedulingInfo {
  DesiredLRPKey desired_lrp_key = 1 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "", (gogoproto.embed) = true];

  string annotation = 2;
  int32 instances = 3;

  DesiredLRPResource desired_lrp_resource = 4 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "", (gogoproto.embed) = true];

  ProtoRoutes routes = 5 [(gogoproto.nullable) = false, (gogoproto.customtype) = "Routes"];
  ModificationTag modification_tag = 6 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "", (gogoproto.embed) = true];
  VolumePlacement volume_placement = 7 [(gogoproto.jsontag) = "volume_placement,omitempty"];
  repeated string PlacementTags = 8 [(gogoproto.jsontag) ="placement_tags,omitempty"];
}

message DesiredLRPRunInfo {
  DesiredLRPKey desired_lrp_key = 1 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "", (gogoproto.embed) = true];

  repeated EnvironmentVariable environment_variables = 2 [(gogoproto.jsontag) = "env", (gogoproto.nullable) = false];
  Action setup = 3;
  Action action = 4;
  Action monitor = 5;

  uint32 deprecated_start_timeout_s = 6 [(gogoproto.jsontag) = "start_timeout,omitempty", deprecated=true];

  bool privileged = 7;

  uint32 cpu_weight = 8;
  repeated uint32 ports = 9;
  repeated SecurityGroupRule egress_rules = 10 [(gogoproto.nullable) = false];
  string log_source = 11;
  string metrics_guid = 12 [deprecated=true];
  int64 created_at = 13;
  repeated CachedDependency cached_dependencies = 14 [(gogoproto.jsontag) = "cached_dependencies,omitempty"];
  string legacy_download_user = 15 [(gogoproto.jsontag) = "legacy_download_user,omitempty", deprecated=true];
  string trusted_system_certificates_path = 16 [(gogoproto.jsontag) = "trusted_system_certificates_path,omitempty"];
  repeated VolumeMount volume_mounts = 17 [(gogoproto.jsontag) = "volume_mounts,omitempty"];
  Network network = 18 [(gogoproto.jsontag) = "network,omitempty"];

  int64 start_timeout_ms = 19;

  CertificateProperties certificate_properties = 20 [(gogoproto.nullable) = true, (gogoproto.jsontag) = "certificate_properties,omitempty"];

  string image_username = 21 [(gogoproto.jsontag) = "image_username,omitempty"];
  string image_password = 22 [(gogoproto.jsontag) = "image_password,omitempty"];

  CheckDefinition check_definition = 23 [(gogoproto.jsontag) = "check_definition,omitempty"];

  repeated ImageLayer image_layers = 24;

  map<string, MetricTagValue> metric_tags = 25;
}

// helper message for marshalling routes
message ProtoRoutes {
  map<string, bytes> routes = 1;
}

message DesiredLRPUpdate {
  oneof optional_instances {
    int32 instances = 1;
  }
  ProtoRoutes routes = 2 [(gogoproto.nullable) = true, (gogoproto.customtype) = "Routes"];
  oneof optional_annotation {
    string annotation = 3;
  }
}

message DesiredLRPKey {
  string process_guid = 1;
  string domain = 2;
  string log_guid = 3;
}

message DesiredLRPResource {
  int32 memory_mb = 1;
  int32 disk_mb = 2;
  string root_fs = 3 [(gogoproto.jsontag) = "rootfs"];
  int32 max_pids = 4;
}

message DesiredLRP {
  string process_guid = 1;
  string domain = 2;
  string root_fs = 3 [(gogoproto.jsontag) = "rootfs"];
  int32 instances = 4;
  repeated EnvironmentVariable environment_variables = 5 [(gogoproto.jsontag) = "env"];
  Action setup = 6;
  Action action = 7;

  int64 start_timeout_ms = 27;
  uint32 deprecated_start_timeout_s = 8 [(gogoproto.jsontag) = "deprecated_timeout_ns,omitempty", deprecated=true];

  Action monitor = 9;
  int32 disk_mb = 10;
  int32 memory_mb = 11;
  uint32 cpu_weight = 12;
  bool privileged = 13;
  repeated uint32 ports = 14;
  ProtoRoutes routes = 15 [(gogoproto.nullable) = true, (gogoproto.customtype) = "Routes"];
  string log_source = 16;
  string log_guid = 17;
  string metrics_guid = 18 [deprecated=true];
  string annotation = 19;
  repeated SecurityGroupRule egress_rules = 20;
  ModificationTag modification_tag = 21;
  repeated CachedDependency cached_dependencies = 22 [(gogoproto.jsontag) = "cached_dependencies,omitempty"];
  string legacy_download_user = 23 [(gogoproto.jsontag) = "legacy_download_user,omitempty", deprecated=true];
  string trusted_system_certificates_path = 24 [(gogoproto.jsontag) = "trusted_system_certificates_path,omitempty"];
  repeated VolumeMount volume_mounts = 25 [(gogoproto.jsontag) = "volume_mounts,omitempty"];
  Network network = 26 [(gogoproto.jsontag) = "network,omitempty"];
  repeated string PlacementTags = 28 [(gogoproto.jsontag) ="placement_tags,omitempty"];
  int32 max_pids = 29;

  CertificateProperties certificate_properties = 30 [(gogoproto.nullable) = true, (gogoproto.jsontag) = "certificate_properties,omitempty"];

  string image_username = 31 [(gogoproto.jsontag) = "image_username,omitempty"];
  string image_password = 32 [(gogoproto.jsontag) = "image_password,omitempty"];

  CheckDefinition check_definition = 33 [(gogoproto.jsontag) = "check_definition,omitempty"];

  repeated ImageLayer image_layers = 34;

  map<string, MetricTagValue> metric_tags = 35;
}
